@@ -1,0 +1,38 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/Attic/eix-0.12.2.ebuild,v 1.1 2008/03/25 17:08:14 genstef Exp $
+
+DESCRIPTION="Small utility for searching ebuilds with indexing for fast results"
+HOMEPAGE="http://eix.sourceforge.net"
+SRC_URI="mirror://sourceforge/eix/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
+IUSE="doc sqlite"
+
+RDEPEND="sqlite? ( >=dev-db/sqlite-3 )
+	app-arch/bzip2"
+DEPEND="${RDEPEND}
+	doc? ( dev-python/docutils )"
+
+src_compile() {
+	econf --with-bzip2 $(use_with sqlite) $(use_with doc rst) || die "econf failed"
+	emake || die "emake failed"
+}
+
+src_install() {
+	emake DESTDIR="${D}" install || die "emake install failed"
+
+	dodoc AUTHORS ChangeLog doc/format.txt
+	use doc && dodoc doc/format.html
+}
+
+pkg_postinst() {
+	ewarn
+	ewarn "Security Warning:"
+	ewarn
+	ewarn "Since >=eix-0.12.0, eix uses by default OVERLAY_CACHE_METHOD=\"parse|ebuild*\""
+	ewarn "This is rather reliable, but ebuilds may be executed by user \"portage\". Set"
+	ewarn "OVERLAY_CACHE_METHOD=parse in /etc/eixrc if you do not trust the ebuilds."
+}
